# motion-pattern-analysis-orthopedic

./: .gitignore  README.md  RECORDING_GUIDELINES.md  SCRATCH.md  knee_angle_analyzer.py  pyproject.toml  video_analysis_fitting_skeleton.py
joint_analysis/: analyze_proprocessed_walks.py
knee_analysis/: angle_calculator.py  dual_video_processor.py  knee_angle_analyzer.py  plotter.py  pose_3d.py  pose_3d_estimator.py  skeleton_fitter.py  standard_skeleton.py  video_processor.py  visualization_3d.py
tests/: test_3d_visualization.py
