[tool.poetry]
name = "motion-Pattern-analysis-orthopedic"
version = "0.1.0"
description = "A tool for analyzing knee angles from video footage"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.8.1.78"
mediapipe = "^0.10.8"
numpy = "^1.26.3"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
